--- a/registration/src/main/res/layout/fragment_signup.xml
+++ b/registration/src/main/res/layout/fragment_signup.xml
@@ -89,9 +89,8 @@
                         android:digits="+0123456789"
                         android:ems="6"
                         android:hint="@string/str_code"
-                        android:inputType="phone"
-                        android:imeOptions="actionNext"
-                        android:maxLength="5"
+                        android:focusable="false"
+                        android:enabled="false"
                         android:textSize="@dimen/font_14" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -174,10 +173,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/str_terms_and_condition_privacy_policy"
-                android:layout_marginStart="@dimen/dimen_16"
-                android:layout_marginEnd="@dimen/dimen_16"
-                android:layout_marginTop="@dimen/dimen_10"
-                android:textSize="@dimen/font_12"/>
+                android:padding="@dimen/dimen_16"
+                android:textSize="@dimen/font_12"
+                android:lineSpacingMultiplier="1.2"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonSubmit"
