--- a/registration/src/main/res/layout/fragment_forgot_password.xml
+++ b/registration/src/main/res/layout/fragment_forgot_password.xml
@@ -41,11 +41,9 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/textInputEditText"
                 android:hint="@string/str_email_address"
-                android:inputType="textEmailAddress"
-                android:textSize="@dimen/font_14" />
+                android:inputType="textEmailAddress" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
