--- a/registration/src/main/res/layout/layout_registration_header.xml
+++ b/registration/src/main/res/layout/layout_registration_header.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@null"
-            android:padding="@dimen/dimen_8"
+            android:padding="@dimen/_8sdp"
             android:src="@drawable/ic_back" />
 
         <androidx.appcompat.widget.AppCompatTextView
