--- a/registration/src/main/res/layout/fragment_forgot_password.xml
+++ b/registration/src/main/res/layout/fragment_forgot_password.xml
@@ -33,11 +33,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputEmail"
-            style="@style/textInputLayout"
-            app:boxCornerRadiusBottomEnd="@dimen/dimen_0"
-            app:boxCornerRadiusBottomStart="@dimen/dimen_0"
-            app:boxCornerRadiusTopEnd="@dimen/dimen_0"
-            app:boxCornerRadiusTopStart="@dimen/dimen_0">
+            style="@style/textInputLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editEmail"
