--- a/registration/src/main/res/layout/fragment_forgot_password.xml
+++ b/registration/src/main/res/layout/fragment_forgot_password.xml
@@ -9,7 +9,7 @@
         android:id="@+id/layoutHeader"
         layout="@layout/layout_registration_header" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
